--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
 version: "3"
 services:
     app:
-        image: cc-skill-test-laravel:latest
+        # image: cc-skill-test-laravel:latest
+        image: ghcr.io/theoyrus/cc-be-test:latest
         container_name: app
         restart: unless-stopped
         volumes:
